<resources>
    <string name="app_name">Rentron</string>
    <string name="register">New account? Register</string>
    <string name="text_register">Register</string>
    <string name="create_account">Create a Rentron account</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="username">Email address:</string>
    <string name="password">Password:</string>
    <string name="confirm_password">Confirm password:</string>
    <string name="first_name">First name:</string>
    <string name="last_name">Last name:</string>
    <string name="address">Address:</string>
    <string name="birth_year">Birth year:</string>
    <string name="pick_role">Choose your role:</string>
    <string-array name="roles_array">
        <item>Client</item>
        <item>Landlord</item>
        <item>Property Manager</item>
    </string-array>
    <string-array name="ticket_types">
        <item>Maintenance</item>
        <item>Security</item>
        <item>Damage</item>
        <item>Infestation</item>
    </string-array>
    <string name="default_welcome">Welcome, [user]!</string>
    <string name="default_welcome_role">Your role is: [role]</string>
    <string name="properties">Properties:</string>
    <string name="property_register">Register Property</string>
</resources>